--- a/JOBserve/View/addTopicView.xib
+++ b/JOBserve/View/addTopicView.xib
@@ -26,14 +26,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xK2-IT-SG5">
-                    <rect key="frame" x="20" y="74" width="120" height="40"/>
+                    <rect key="frame" x="20" y="74" width="150" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="120" id="gqH-BN-Apt"/>
+                        <constraint firstAttribute="width" constant="150" id="gqH-BN-Apt"/>
                         <constraint firstAttribute="height" constant="40" id="yqK-vW-CQh"/>
                     </constraints>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.backward.circle.fill" catalog="system" imagePlacement="leading" title="Back" imagePadding="8">
+                    <buttonConfiguration key="configuration" style="plain" image="arrowshape.turn.up.backward.circle.fill" catalog="system" imagePlacement="leading" title="retour" imagePadding="8">
                         <fontDescription key="titleFontDescription" type="boldSystem" pointSize="22"/>
                     </buttonConfiguration>
                     <connections>
@@ -43,7 +43,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E4v-X7-yhn">
                     <rect key="frame" x="10" y="154" width="394" height="518"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title of the new topic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VYO-NO-r90">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Titre du topic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VYO-NO-r90">
                             <rect key="frame" x="10" y="20" width="374" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="no9-qj-k4h"/>
@@ -123,7 +123,7 @@
                     </constraints>
                     <color key="tintColor" name="AccentColor"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Propose Topics">
+                    <buttonConfiguration key="configuration" style="plain" title="Proposer topic">
                         <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </buttonConfiguration>
                     <connections>
