--- a/JOBserve/View/securityView.xib
+++ b/JOBserve/View/securityView.xib
@@ -123,7 +123,7 @@
                                     <color key="backgroundColor" systemColor="systemPinkColor"/>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" image="lock.circle" catalog="system" imagePlacement="top" title="Security"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="lock.circle" catalog="system" imagePlacement="top" title="Securité"/>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fu8-X3-QuS">
                                     <rect key="frame" x="193.5" y="0.0" width="84" height="50"/>
